[FIX] x overflow hidden
[FIX] - 스크롤 넘치는 페이지 상위에서 overflow hidden

--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -9,6 +9,7 @@ body {
   list-style: none;
   line-height: 1;
   outline: none;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
